Добавляет папку с картинками и графику для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,13 @@
     <header class="main-header">
       <h1 class="visually-hidden">Девайс</h1>
       <a class="logo" href="index.html">
-        <img class="page-header-logo" alt="Логотип магазина" src="#" />
+        <img
+          class="page-header-logo"
+          src="images/logo-image.svg"
+          width="145"
+          height="36"
+          alt="Логотип магазина"
+        />
       </a>
       <nav class="navigation">
         <h2 class="visually-hidden">Пользовательская навигация</h2>
@@ -55,7 +61,7 @@
           </li>
           <li>
             <a class="navigation-button" href="catalog.html">
-            <span class="visually-hidden">Кнопка раскрытия каталога</span>
+              <span class="visually-hidden">Кнопка раскрытия каталога</span>
             </a>
           </li>
           <li>
@@ -86,7 +92,7 @@
         </ul>
       </header>
       <section class="catalog-products">
-      <h2 class="visually-hidden">Список товаров с фильтрами</h2>
+        <h2 class="visually-hidden">Список товаров с фильтрами</h2>
         <form
           class="catalog-filter"
           action="https://echo.htmlacademy.ru"
@@ -182,7 +188,7 @@
             </ul>
           </fieldset>
           <button class="button" type="submit">Показать</button>
-          </form>
+        </form>
         <h3 class="sort-title">Сортировка</h3>
         <select class="select-control" aria-label="Сортировка">
           <option value="popular">Популярные</option>
@@ -193,13 +199,16 @@
           <span class="visually-hidden">Сортировка по возрастанию</span></a
         >
         <a class="button button-down" href="#">
-          <span class="visually-hidden">Сортировка по убыванию</span></a>
-            <ul class="product-list">
-              <li class="product-card">
-                <a class="product-card-link" href="#">
+          <span class="visually-hidden">Сортировка по убыванию</span></a
+        >
+        <ul class="product-list">
+          <li class="product-card">
+            <a class="product-card-link" href="#">
               <img
                 class="product-card-image"
-                src="#"
+                src="images/catalog-1.jpg"
+                width="360"
+                height="380"
                 alt="Изображение любительской селфи-палки"
               />
               <h3 class="product-card-title">Любительская селфи-палка</h3>
@@ -210,7 +219,9 @@
             <a class="product-card-link" href="#">
               <img
                 class="product-card-image"
-                src="#"
+                src="images/catalog-2.jpg"
+                width="360"
+                height="380"
                 alt="Изображение профессиональной селфи-палки"
               />
               <h3 class="product-card-title">Профессиональная селфи-палка</h3>
@@ -221,7 +232,9 @@
             <a class="product-card-link" href="#">
               <img
                 class="product-card-image"
-                src="#"
+                src="images/catalog-3.jpg"
+                width="360"
+                height="380"
                 alt="Изображение непотопляемой селфи-палки"
               />
               <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
@@ -232,7 +245,9 @@
             <a class="product-card-link" href="#">
               <img
                 class="product-card-image"
-                src="#"
+                src="images/catalog-4.jpg"
+                width="360"
+                height="380"
                 alt="Изображение селфи-палки следуй за мной"
               />
               <h3 class="product-card-title">Селфи-палка "Следуй за мной"</h3>
@@ -277,7 +292,13 @@
     <footer class="page-footer">
       <section class="footer-address">
         <h3 class="visually-hidden">Адрес</h3>
-        <img class="site-logo" src="#" alt="Логотип сайта" />
+        <img
+          class="site-logo"
+          src="images/logo-footer.svg"
+          width="145"
+          alt="36"
+          alt="Логотип сайта"
+        />
         <address class="contacts-address">
           Санкт-Петербург, набережная реки Карповки, 5, литера П.
         </address>
@@ -301,26 +322,52 @@
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button" href="t.me/htmlacademy">
+              <img
+                class="social-logo"
+                src="images/telegram-icon.svg"
+                width="13.34"
+                height="11.19"
+                alt="иконка телеграм"
+              />
               <span class="visually-hidden">Телеграм</span></a
             >
           </li>
           <li class="footer-social-item">
             <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <img
+                class="social-logo"
+                src="images/youtube-icon.svg"
+                width="16"
+                height="10.67"
+                alt="иконка youtube"
+              />
               <span class="visually-hidden">YouTube</span></a
             >
           </li>
           <li class="footer-social-item">
             <a class="button" href="https://twitter.com/htmlacademy_ru">
+              <img
+                class="social-logo"
+                src="images/twitter-icon.svg"
+                width="15"
+                height="14.06"
+                alt="иконка twitter"
+              />
               <span class="visually-hidden">Twitter</span></a
             >
           </li>
         </ul>
-        </section>
-        <section class="footer-phone-number">
-          <h3 class="visually-hidden">Номер телефона</h3>
-            <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-            <a href="https://htmlacademy.ru/"
-          ><img class="academy-logo" src="#" alt="Логотип академии"
+      </section>
+      <section class="footer-phone-number">
+        <h3 class="visually-hidden">Номер телефона</h3>
+        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a href="https://htmlacademy.ru/"
+          ><img
+            class="academy-logo"
+            src="images/html-logo.svg"
+            width="114.9"
+            height="32.9"
+            alt="Логотип академии"
         /></a>
       </section>
     </footer>
