--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <header class="main-header">
       <h1 class="visually-hidden">Девайс</h1>
       <a class="logo" href="#">
-        <img class="page-header-logo" alt="Логотип магазина" src="#" />
+        <img
+          class="page-header-logo"
+          src="images/logo-image.svg"
+          width="145"
+          height="36"
+          alt="Логотип магазина"
+        />
       </a>
       <nav class="navigation">
         <h2 class="visually-hidden">Пользовательская навигация</h2>
@@ -39,7 +45,6 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Сравнить</a>
-            <img class="compare-icon" src="#" alt="Сравнение" />
           </li>
           <li>
             <a class="navigation-link" href="#">Корзина</a>
@@ -70,7 +75,13 @@
     <main class="main-index">
       <section class="sliders">
         <h2 class="visually-hidden">Изображения Квадрокоптеров</h2>
-        <img class="slider-image" src="#" alt="Квадрокоптеры" />
+        <img
+          class="slider-image"
+          src="images/copter-image.png"
+          width="560"
+          height="560"
+          alt="Квадрокоптеры"
+        />
         <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущий товар</span>
         </button>
@@ -100,37 +111,73 @@
           </li>
         </ul>
         <a class="button button-more" href="#">Подробнее</a>
-          <ul class="spec-list">
-            <li class="spec-item">
-              <b class="spec-range">800 м</b>
-              <span class="range-name">Дальность полета</span>
-            </li>
-            <li>
-              <b class="spec-radius">50 м</b>
-              <span class="radius-name">Радиус поражения</span>
-            </li>
-          </ul>
+        <ul class="spec-list">
+          <li class="spec-item">
+            <b class="spec-range">800 м</b>
+            <span class="range-name">Дальность полета</span>
+          </li>
+          <li>
+            <b class="spec-radius">50 м</b>
+            <span class="radius-name">Радиус поражения</span>
+          </li>
+        </ul>
       </section>
       <section class="products">
         <h3 class="visually-hidden">Категории товаров</h3>
         <ul class="products-list">
           <li class="product-item">
-            <a href="#"><img src="#" alt="Виртуальная реальность" /></a>
+            <a href="#"
+              ><img
+                src="images/vr-image.svg"
+                width="96.95"
+                height="54.99"
+                alt="Виртуальная реальность"
+            /></a>
           </li>
           <li class="product-item">
-            <a href="#"><img src="#" alt="Моноподы для селфи" /></a>
+            <a href="#"
+              ><img
+                src="images/selfie-stick-image.svg"
+                width="85.87"
+                height="117"
+                alt="Моноподы для селфи"
+            /></a>
           </li>
           <li class="product-item">
-            <a href="#"><img src="#" alt="Экшн-камеры" /></a>
+            <a href="#"
+              ><img
+                src="images/action-camera-image.svg"
+                width="71.02"
+                height="87"
+                alt="Экшн-камеры"
+            /></a>
           </li>
           <li class="product-item">
-            <a href="#"><img src="#" alt="Фитнес-браслеты" /></a>
+            <a href="#"
+              ><img
+                src="images/fit-bracelet-image.svg"
+                width="107.31"
+                height="64.99"
+                alt="Фитнес-браслеты"
+            /></a>
           </li>
           <li class="product-item">
-            <a href="#"><img src="#" alt="Умные часы" /></a>
+            <a href="#"
+              ><img
+                src="images/smart-watch-image.svg"
+                width="56.01"
+                height="97.98"
+                alt="Умные часы"
+            /></a>
           </li>
           <li class="product-item">
-            <a href="#"><img src="#" alt="Квадрокоптеры" /></a>
+            <a href="#"
+              ><img
+                src="images/copter-small.svg"
+                width="132.03"
+                height="69.01"
+                alt="Квадрокоптеры"
+            /></a>
           </li>
         </ul>
       </section>
@@ -152,6 +199,13 @@
           Мы с удовольствием доставим ваш товар прямо<br />
           к вашему подъезду совершенно бесплатно! Ведь <br />
           мы неплохо заработаем, поднимая его на ваш этаж.
+          <img
+            class="delivery-man-image"
+            src="images/delivery-man-image.png"
+            width="136"
+            height="164"
+            alt="Изоюражение доставщика"
+          />
         </div>
         <span class="delivery-notice">Доставим редкий товар под заказ</span>
         <h2 class="about-title">О нас</h2>
@@ -204,12 +258,25 @@
           <button class="button" type="submit">Подписаться</button>
         </form>
         <strong class="warning">Это бесплатно</strong>
+        <img
+          class="delivery-car-logo"
+          src="images/delivery-car-image.svg"
+          width="47"
+          height="31.1"
+          alt="Изображение автомобиля доставки"
+        />
       </section>
     </main>
     <footer class="page-footer">
       <section class="footer-address">
         <h3 class="visually-hidden">Адрес</h3>
-        <img class="site-logo" src="#" alt="Логотип сайта" />
+        <img
+          class="site-logo"
+          src="images/logo-footer.svg"
+          width="147"
+          height="31.1"
+          alt="Логотип сайта"
+        />
         <address class="contacts-address">
           <p class="contacts-address-text">
             Санкт-Петербург, набережная реки Карповки, 5, литера П.
@@ -229,16 +296,37 @@
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button" href="t.me/htmlacademy">
+              <img
+                class="social-logo"
+                src="images/telegram-icon.svg"
+                width="13.34"
+                height="11.19"
+                alt="иконка телеграм"
+              />
               <span class="visually-hidden">Телеграм</span></a
             >
           </li>
           <li class="footer-social-item">
             <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <img
+                class="social-logo"
+                src="images/youtube-icon.svg"
+                width="16"
+                height="10.67"
+                alt="иконка youtube"
+              />
               <span class="visually-hidden">YouTube</span></a
             >
           </li>
           <li class="footer-social-item">
             <a class="button" href="https://twitter.com/htmlacademy_ru">
+              <img
+                class="social-logo"
+                src="images/twitter-icon.svg"
+                width="15"
+                height="14.06"
+                alt="иконка twitter"
+              />
               <span class="visually-hidden">Twitter</span></a
             >
           </li>
@@ -247,9 +335,14 @@
       <section class="footer-phone-number">
         <h3 class="visually-hidden">Номер телефона</h3>
         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"
-          ><img class="academy-logo" src="#" alt="Логотип академии"
-        /></a>
+        <a href="https://htmlacademy.ru/"></a>
+        <img
+          class="academy-logo"
+          src="images/html-logo.svg"
+          width="114.9"
+          height="32.9"
+          alt="Логотип академии"
+        />
       </section>
     </footer>
   </body>
