Исправляет ошибки в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,7 @@
           </li>
           <li>
             <a class="navigation-link" href="#">Корзина</a>
-            <span class="bin-icon-counter">иконка корзины</span>
+            <span class="bin-icon-counter">Иконка корзины</span>
           </li>
         </ul>
         <ul class="navigation-list navigation-main">
@@ -187,7 +187,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button" type="submit">Показать</button>
+          <button class="button">Показать</button>
         </form>
         <h3 class="sort-title">Сортировка</h3>
         <select class="select-control" aria-label="Сортировка">
@@ -256,12 +256,12 @@
           </li>
         </ul>
         <button class="button pagination-show-more" type="button">
-          показать еще
+          Показать еще
         </button>
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-prev pagination-disabled"
-              >НАЗАД</a
+              >Назад</a
             >
           </li>
           <li class="pagination-item">
@@ -283,7 +283,7 @@
             <a
               class="pagination-link pagination-next pagitanion-enabledd"
               href="#"
-              >ВПЕРЕД</a
+              >Вперед</a
             >
           </li>
         </ul>
@@ -307,13 +307,13 @@
         <h3 class="visually-hidden">Услуги</h3>
         <ul class="services-list">
           <li class="services-item">
-            <a class="services-item-link">Доставка</a>
+            <a class="services-item-link" href="#">Доставка</a>
           </li>
           <li class="services-item">
-            <a class="services-item-link">Гарантия</a>
+            <a class="services-item-link" href="#">Гарантия</a>
           </li>
           <li class="services-item">
-            <a class="services-item-link">Контакты</a>
+            <a class="services-item-link" href="#">Контакты</a>
           </li>
         </ul>
       </section>
