Исправляет ошибки на главной странице

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="main-header">
@@ -219,7 +220,7 @@
         </p>
         <ul class="about-delivery-description-list">
           <li class="about-delivery-description-item"><b>Меловые линии</b></li>
-          <li class="about-delivery-description-item"><b>СДИК</b></li>
+          <li class="about-delivery-description-item"><b>Сдик</b></li>
           <li class="about-delivery-description-item"><b>ТоксБерри</b></li>
         </ul>
         <a href="#">Подробнее о нас</a>
@@ -255,7 +256,7 @@
           method="post"
         >
           <input type="email" name="email" placeholder="Ваш e-mail" required />
-          <button class="button" type="submit">Подписаться</button>
+          <button class="button">Подписаться</button>
         </form>
         <strong class="warning">Это бесплатно</strong>
         <img
