исправляет ошибки в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -292,13 +292,15 @@
     <footer class="page-footer">
       <section class="footer-address">
         <h3 class="visually-hidden">Адрес</h3>
-        <img
-          class="site-logo"
-          src="images/logo-footer.svg"
-          width="145"
-          alt="36"
-          alt="Логотип сайта"
-        />
+        <a href="index.html">
+          <img
+            class="site-logo"
+            src="images/logo-footer.svg"
+            width="145"
+            alt="36"
+            alt="Логотип сайта"
+          />
+        </a>
         <address class="contacts-address">
           Санкт-Петербург, набережная реки Карповки, 5, литера П.
         </address>
