--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
                 id="search-field"
                 placeholder="Текст поиска"
               />
-              <input
-                class="search-button"
-                type="submit"
-                name="submit"
-                value="Найти"
-              />
+              <button
+                class="search-button">Найти</button>
             </form>
           </li>
           <li class="navigation-item">
@@ -143,8 +139,9 @@
                 width="85.87"
                 height="117"
                 alt="Моноподы для селфи"
-            /></a>
-            <a href="#">Моноподы для селфи</a>
+              />
+              <span>Моноподы для селфи</span>
+            </a>
           </li>
           <li class="product-item">
             <a href="#"
@@ -153,8 +150,9 @@
                 width="71.02"
                 height="87"
                 alt="Экшн-камеры"
-            /></a>
-            <a href="#">Экшн-камеры</a>
+              />
+              <span>Экшн-камеры</span>
+            </a>
           </li>
           <li class="product-item">
             <a href="#"
@@ -163,8 +161,9 @@
                 width="107.31"
                 height="64.99"
                 alt="Фитнес-браслеты"
-            /></a>
-            <a href="#">Фитнес-браслеты</a>
+              />
+              <span>Фитнес-браслеты</span>
+            </a>
           </li>
           <li class="product-item">
             <a href="#"
@@ -173,8 +172,9 @@
                 width="56.01"
                 height="97.98"
                 alt="Умные часы"
-            /></a>
-            <a href="#">Умные часы</a>
+              />
+              <span>Умные часы</span>
+            </a>
           </li>
           <li class="product-item">
             <a href="#"
@@ -183,8 +183,9 @@
                 width="132.03"
                 height="69.01"
                 alt="Квадрокоптеры"
-            /></a>
-            <a href="#">Квадрокоптеры</a>
+              />
+              <span>Квадрокоптеры</span>
+            </a>
           </li>
         </ul>
       </section>
@@ -204,10 +205,10 @@
       </section>
       <section class="delivery">
         <h2 class="delivery-title" id="delivery">Доставка</h2>
-        <div class="delivery-description">
-          Мы с удовольствием доставим ваш товар прямо<br />
+          <p>Мы с удовольствием доставим ваш товар прямо<br />
           к вашему подъезду совершенно бесплатно! Ведь <br />
           мы неплохо заработаем, поднимая его на ваш этаж.
+        </p>
           <img
             class="delivery-man-image"
             src="images/delivery-man-image.png"
@@ -215,7 +216,7 @@
             height="164"
             alt="Изображение доставщика"
           />
-        </div>
+      </section>
         <div class="delivery-notice">Доставим редкий товар под заказ</div>
       </section>
       <section class="about">
@@ -282,14 +283,14 @@
       <section class="footer-address">
         <h3 class="visually-hidden">Адрес</h3>
         <a href="index.html">
-        <img
-          class="site-logo"
-          src="images/logo-footer.svg"
-          width="147"
-          height="31.1"
-          alt="Логотип сайта"
-        />
-      </a>
+          <img
+            class="site-logo"
+            src="images/logo-footer.svg"
+            width="147"
+            height="31.1"
+            alt="Логотип сайта"
+          />
+        </a>
         <address class="contacts-address">
           <p class="contacts-address-text">
             Санкт-Петербург, набережная реки Карповки, 5, литера П.
