Исправляет ошибки на главной странице

--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
                 width="96.95"
                 height="54.99"
                 alt="Виртуальная реальность"
-            /></a>
-            <a href="#">Виртуальная реальность</a>
+            />
+          <span>Виртуальная реальность</span>
+          </a>
           </li>
           <li class="product-item">
             <a href="#"
