исправляет ошибку на главной странице

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 id="search-field"
                 placeholder="Текст поиска"
               />
-              <button
-                class="search-button">Найти</button>
+              <button class="search-button">Найти</button>
             </form>
           </li>
           <li class="navigation-item">
@@ -129,9 +128,9 @@
                 width="96.95"
                 height="54.99"
                 alt="Виртуальная реальность"
-            />
-          <span>Виртуальная реальность</span>
-          </a>
+              />
+              <span>Виртуальная реальность</span>
+            </a>
           </li>
           <li class="product-item">
             <a href="#"
@@ -206,20 +205,20 @@
       </section>
       <section class="delivery">
         <h2 class="delivery-title" id="delivery">Доставка</h2>
-          <p>Мы с удовольствием доставим ваш товар прямо<br />
+        <p>
+          Мы с удовольствием доставим ваш товар прямо<br />
           к вашему подъезду совершенно бесплатно! Ведь <br />
           мы неплохо заработаем, поднимая его на ваш этаж.
         </p>
-          <img
-            class="delivery-man-image"
-            src="images/delivery-man-image.png"
-            width="136"
-            height="164"
-            alt="Изображение доставщика"
-          />
+        <img
+          class="delivery-man-image"
+          src="images/delivery-man-image.png"
+          width="136"
+          height="164"
+          alt="Изображение доставщика"
+        />
       </section>
-        <div class="delivery-notice">Доставим редкий товар под заказ</div>
-      </section>
+      <div class="delivery-notice">Доставим редкий товар под заказ</div>
       <section class="about">
         <h2 class="about-title">О нас</h2>
         <p class="about-description">
