Исправляет ошибки в графике на главной странице

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <header class="main-header">
       <h1 class="visually-hidden">Девайс</h1>
-      <a class="logo" href="#">
+      <a class="logo" href="index.html">
         <img
           class="page-header-logo"
-          src="images/logo-image.svg"
+          src="images/logo.svg"
           width="145"
           height="36"
           alt="Логотип магазина"
@@ -73,7 +73,7 @@
         <h2 class="visually-hidden">Изображения Квадрокоптеров</h2>
         <img
           class="slider-image"
-          src="images/copter-image.png"
+          src="images/copter.png"
           width="560"
           height="560"
           alt="Квадрокоптеры"
@@ -122,67 +122,73 @@
         <h3 class="visually-hidden">Категории товаров</h3>
         <ul class="products-list">
           <li class="product-item">
-            <a href="#"
-              ><img
-                src="images/vr-image.svg"
-                width="97"
-                height="55"
-                alt="Виртуальная реальность"
+            <a href="#">
+              <img
+                class="vr-image"
+                src="/images/vr.png"
+                width="160"
+                height="160"
+                alt="Изображение очков vr"
               />
               <span>Виртуальная реальность</span>
             </a>
           </li>
           <li class="product-item">
-            <a href="#"
-              ><img
-                src="images/selfie-stick-image.svg"
-                width="87"
-                height="117"
-                alt="Моноподы для селфи"
+            <a href="catalog.html">
+              <img
+                class="selfie-image"
+                src="/images/selfie.png"
+                width="160"
+                height="160"
+                alt="Изображение монопода для селфи"
               />
               <span>Моноподы для селфи</span>
             </a>
           </li>
           <li class="product-item">
-            <a href="#"
-              ><img
-                src="images/action-camera-image.svg"
-                width="72"
-                height="87"
-                alt="Экшн-камеры"
+            <a href="#">
+              <img
+                class="cam-image"
+                src="/images/action-cam.png"
+                width="160"
+                height="160"
+                alt="Изображение экшн-камеры'"
               />
               <span>Экшн-камеры</span>
             </a>
           </li>
           <li class="product-item">
-            <a href="#"
-              ><img
-                src="images/fit-bracelet-image.svg"
-                width="107.31"
-                height="64.99"
-                alt="Фитнес-браслеты"
+            <a href="#">
+              <img
+                class="fit-image"
+                src="/images/fit-bracelet.png"
+                width="160"
+                height="160"
+                alt="Изображение фитнес-браслета'"
               />
               <span>Фитнес-браслеты</span>
             </a>
           </li>
           <li class="product-item">
-            <a href="#"
-              ><img
-                src="images/smart-watch-image.svg"
-                width="57"
-                height="98"
-                alt="Умные часы"
+            <a href="#">
+              <img
+                class="watch-image"
+                src="/images/smart-watch.png"
+                width="160"
+                height="160"
+                alt="Изображение умных часов'"
               />
               <span>Умные часы</span>
             </a>
           </li>
           <li class="product-item">
-            <a href="#"
-              ><img
-                src="images/copter-small.svg"
-                width="133"
-                height="70"
-                alt="Квадрокоптеры"
+            <a href="#">
+              <img
+                class="cam-image"
+                src="/images/copter-small.png"
+                width="160"
+                height="160"
+                alt="Изображение квадрокоптера"
               />
               <span>Квадрокоптеры</span>
             </a>
@@ -210,13 +216,6 @@
           к вашему подъезду совершенно бесплатно! Ведь <br />
           мы неплохо заработаем, поднимая его на ваш этаж.
         </p>
-        <img
-          class="delivery-man-image"
-          src="images/delivery-man-image.png"
-          width="136"
-          height="164"
-          alt="Изображение доставщика"
-        />
       </section>
       <div class="delivery-notice">Доставим редкий товар под заказ</div>
       <section class="about">
@@ -255,7 +254,7 @@
         <a href="#">Напишите нам</a>
       </section>
       <section class="newsletter">
-        <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">
           Еженедельный дайджест с обзорами новинок,<br />
           длительными тест-драйвами, распаковками, а также акции,<br />
@@ -270,13 +269,6 @@
           <button class="button">Подписаться</button>
         </form>
         <span class="warning">Это бесплатно</span>
-        <img
-          class="delivery-car-logo"
-          src="images/delivery-car-image.svg"
-          width="47"
-          height="31"
-          alt="Изображение автомобиля доставки"
-        />
       </section>
     </main>
     <footer class="page-footer">
@@ -312,7 +304,7 @@
             <a class="button" href="t.me/htmlacademy">
               <img
                 class="social-logo"
-                src="images/telegram-icon.svg"
+                src="images/telegram.svg"
                 width="14"
                 height="12"
                 alt="иконка телеграм"
@@ -324,7 +316,7 @@
             <a class="button" href="https://www.youtube.com/user/htmlacademyru">
               <img
                 class="social-logo"
-                src="images/youtube-icon.svg"
+                src="images/youtube.svg"
                 width="16"
                 height="11"
                 alt="иконка youtube"
@@ -336,7 +328,7 @@
             <a class="button" href="https://twitter.com/htmlacademy_ru">
               <img
                 class="social-logo"
-                src="images/twitter-icon.svg"
+                src="images/twitter.svg"
                 width="15"
                 height="14"
                 alt="иконка twitter"
@@ -352,7 +344,7 @@
         <a href="https://htmlacademy.ru/">
           <img
             class="academy-logo"
-            src="images/html-logo.svg"
+            src="images/html.svg"
             width="115"
             height="33"
             alt="Логотип академии"
