Исправляет ошибки в графике в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
       <a class="logo" href="index.html">
         <img
           class="page-header-logo"
-          src="images/logo-image.svg"
+          src="images/logo.svg"
           width="145"
           height="36"
           alt="Логотип магазина"
@@ -326,7 +326,7 @@
             <a class="button" href="t.me/htmlacademy">
               <img
                 class="social-logo"
-                src="images/telegram-icon.svg"
+                src="images/telegram.svg"
                 width="14"
                 height="12"
                 alt="иконка телеграм"
@@ -338,7 +338,7 @@
             <a class="button" href="https://www.youtube.com/user/htmlacademyru">
               <img
                 class="social-logo"
-                src="images/youtube-icon.svg"
+                src="images/youtube.svg"
                 width="16"
                 height="11"
                 alt="иконка youtube"
@@ -350,7 +350,7 @@
             <a class="button" href="https://twitter.com/htmlacademy_ru">
               <img
                 class="social-logo"
-                src="images/twitter-icon.svg"
+                src="images/twitter.svg"
                 width="15"
                 height="14"
                 alt="иконка twitter"
@@ -366,7 +366,7 @@
         <a href="https://htmlacademy.ru/"
           ><img
             class="academy-logo"
-            src="images/html-logo.svg"
+            src="images/html.svg"
             width="115"
             height="33"
             alt="Логотип академии"
