Исправляет ошибки в графике

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="main-header">
@@ -52,7 +53,6 @@
           </li>
           <li>
             <a class="navigation-link" href="#">Корзина</a>
-            <span class="bin-icon-counter">Иконка корзины</span>
           </li>
         </ul>
         <ul class="navigation-list navigation-main">
@@ -187,7 +187,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button">Показать</button>
+          <button class="button-more">Показать</button>
         </form>
         <h3 class="sort-title">Сортировка</h3>
         <select class="select-control" aria-label="Сортировка">
@@ -281,7 +281,7 @@
           </li>
           <li class="pagination-item">
             <a
-              class="pagination-link pagination-next pagitanion-enabledd"
+              class="pagination-link pagination-next pagination-enabled"
               href="#"
               >Вперед</a
             >
@@ -297,7 +297,7 @@
             class="site-logo"
             src="images/logo-footer.svg"
             width="145"
-            alt="36"
+            height="36"
             alt="Логотип сайта"
           />
         </a>
