--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
           </li>
           <li>
             <a class="navigation-link" href="#">Корзина</a>
-            <span class="bin-icon-counter">Иконка корзины</span>
           </li>
         </ul>
         <ul class="navigation-list navigation-main">
@@ -106,7 +105,7 @@
             </button>
           </li>
         </ul>
-        <a class="button button-more" href="#">Подробнее</a>
+        <button class="button-more">Подробнее</button>
         <ul class="spec-list">
           <li class="spec-item">
             <b class="spec-range">800 м</b>
@@ -173,7 +172,7 @@
             <a href="#">
               <img
                 class="watch-image"
-                src="/images/smart-watch.png"
+                src="/images/fit-bracelet.png"
                 width="160"
                 height="160"
                 alt="Изображение умных часов'"
@@ -233,7 +232,7 @@
           <li class="about-delivery-description-item"><b>СДИК</b></li>
           <li class="about-delivery-description-item"><b>ТоксБерри</b></li>
         </ul>
-        <a href="#">Подробнее о нас</a>
+        <button class="button-more">Подробнее о нас</button>
       </section>
       <section class="contacts">
         <h2 class="contacts-title" id="contacts">Контакты</h2>
@@ -251,7 +250,7 @@
           <li class="schedule-item">пн—пт: с 10:00 до 22:00</li>
           <li class="schedule-item">сб—вс: с 10:00 до 19:00</li>
         </ul>
-        <a href="#">Напишите нам</a>
+        <button class="button-more">Напишите нам</button>
       </section>
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
@@ -266,7 +265,7 @@
           method="post"
         >
           <input type="email" name="email" placeholder="Ваш e-mail" required />
-          <button class="button">Подписаться</button>
+          <button class="subscribe-button">Подписаться</button>
         </form>
         <span class="warning">Это бесплатно</span>
       </section>
@@ -291,7 +290,7 @@
       </section>
       <section class="footer-services">
         <h3 class="visually-hidden">Услуги</h3>
-        <ul class="services-list">
+        <ul class="footer-services-list">
           <li class="services-item">Доставка</li>
           <li class="services-item">Гарантия</li>
           <li class="services-item">Контакты</li>
