Возвращает ссылки вместо кнопок

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </button>
           </li>
         </ul>
-        <button class="button-more">Подробнее</button>
+        <a class="button-more">Подробнее</a>
         <ul class="spec-list">
           <li class="spec-item">
             <b class="spec-range">800 м</b>
@@ -232,7 +232,7 @@
           <li class="about-delivery-description-item"><b>СДИК</b></li>
           <li class="about-delivery-description-item"><b>ТоксБерри</b></li>
         </ul>
-        <button class="button-more">Подробнее о нас</button>
+        <a class="more-about">Подробнее о нас</a>
       </section>
       <section class="contacts">
         <h2 class="contacts-title" id="contacts">Контакты</h2>
@@ -250,7 +250,7 @@
           <li class="schedule-item">пн—пт: с 10:00 до 22:00</li>
           <li class="schedule-item">сб—вс: с 10:00 до 19:00</li>
         </ul>
-        <button class="button-more">Напишите нам</button>
+        <a class="contact-us">Напишите нам</a>
       </section>
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
